cybergame/css/style.css
body{
	margin: 0;
	padding:0;
    font-family:"product sans","Helvetica Neue",Arial,Sans-Serif;
}
@font-face {
    font-family: 'product_sansregular';
    src: url('product_sans-webfont.eot');
    src: url('product_sans-webfont.eot?#iefix') format('embedded-opentype'),
         url('product_sans-webfont.woff2') format('woff2'),
         url('product_sans-webfont.woff') format('woff'),
         url('product_sans-webfont.svg#product_sansregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
::-webkit-scrollbar{ width:0;}
.photos{
	margin: 0;
	padding:0;
}

.list{
	width: 100%;
}
.header{ 

width:100%; 

height:100px; 

position: absolute;

top: 0;

z-index: 100;
background: -ms-linear-gradient(top, rgba(0,0,0,1),  rgba(0,0,0,0));        /* IE 10 */

background:-moz-linear-gradient(top,rgba(0,0,0,1),rgba(0,0,0,0));/*火狐*/ 

background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));/*谷歌*/ 

background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));      /* Safari 4-5, Chrome 1-9*/

background: -webkit-linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,0));   /*Safari5.1 Chrome 10+*/

background: -o-linear-gradient(top, rgba(0,0,0,1),rgba(0,0,0,0));  /*Opera 11.10+*/

} 
ul,ol{ padding: 0;margin: 0}
.banner { position: relative; overflow: auto; text-align: center;}
.banner li { list-style: none; }
.banner ul li { float: left; }
#b04 { width: 100%;}
#b04 .dots { position: absolute; left: 0; right: 0; bottom: 5%;}
#b04 .dots li 
{ 
    display: inline-block; 
    width: 10px; 
    height: 10px; 
    margin: 5px; 
    text-indent: -999em; 
    border: 2px solid #fff; 
    border-radius: 6px; 
    cursor: pointer; 
    opacity: .4; 
    -webkit-transition: background .5s, opacity .5s; 
    -moz-transition: background .5s, opacity .5s; 
    transition: background .5s, opacity .5s;
}
#b04 .dots li.active 
{
    background: #fff;
    opacity: 1;
}
#b04 .arrow { position: absolute; top: 40%;}
#b04 #al { left: 5%;}
#b04 #ar { right: 5%;}

#headerleft{
	height: 100%;
	position: absolute;
    z-index: 90;
    color: white;
    left: 5%;
    top: 15%;
}

#headerright{
	height: 100%;
	position: absolute;
	z-index: 90;
	color: #ddd;
	right: 5%;
	top: 15%;
}

#headerright li{
	list-style: none;
	float: right;
	position: relative;
    padding-left: 20px;
    padding-top: 20%;
    font-size: 20px;
}

#headerright a:link{
	color: #ddd;
	text-decoration: none;
}

#headerright a:visited{
	color: #ddd;
}
#headerright a:hover{
	color: white;
}

#bar2{
	width: 90%;
	margin-left: 5%;
	position: fixed;
	height:50px;
	top: 100px;
	z-index: 110;
	transition: 0.2s;
	background-color: rgb(49,60,85);
}

.bar2list:hover{
    background-color: rgba(73,83,108,0.8);
}

.bar2list{
	height: 100%;
	width: 100%;
}
#bar2 table{
	color: white;
	height: 100%;
	margin-left: 5%;
}

#bar2 th:hover{
	background-color: rgb(73,83,108);
}

#bar2 th{
	padding-left: 20px;
	padding-right: 20px;
}

.imgcontainer{
	width: 100%;
	height: auto;
}

.absolute{
	position: absolute;
	top: 50%;
}

th a{
	display: block;
	width: 100%;
	height: 40px;
	line-height: 42px;
	font-size: 10px;
}

th a:link{
	text-decoration: none;
	color: white;
}

th a:visited{
	color: white;
}

#phoneheader{
	position: fixed;
	width: 100%;
	height: 50px;
	background-color: rgb(49,60,85);
	display: none;
	z-index: 10;
}

.phoneheader{
	position: fixed;
	width: 100%;
	height: 50px;
	background-color: rgb(49,60,85);
	z-index: 10;
}

#imgholder{
	height: 70%;
	margin-top: 15%;
}

#phonetitle{
	top: 15px;
	position: fixed;
	color: white;
	margin: 0 auto;
	right: 13%;
}

.phonetitle1{
	top: 12px;
	position: absolute;
	color: white;
	margin: 0 auto;
	text-align: center;
	left: 0;
	right: 0;
	z-index: 1;
}

@media(max-width: 320px){
	#phonetitle{
		right: 5%;
	}
}

@media(min-width: 560px){
	#phonetitle{
		right: 25%;
	}
}
@media(min-width: 768px){
	#phonetitle{
		right: 31%;
	}
}

@media(min-width: 1024px){
	.phoneheader{
		width: 768px;
	}
}
#phonebarbackground{
	position: fixed;
	background-color: rgba(0,0,0,0);
	height: 100%;
	width: 100%;
	z-index: -1;
	transition: 0.2s;
}
#pcbackground{
	position: fixed;
	background-color: rgba(0,0,0,0);
	height: 100%;
	width: 100%;
	transition: 0.2s;
	z-index: -1;
}

#phonebar{
	position: fixed;
	background-color: rgb(49,60,85);
	width: 200px;
	z-index: 300;
	height: 100%;
	transition: 0.2s ease-out;
	left: -200px;
	overflow: auto;
}

#headerh2{
	margin: 13px;
}

#register{
	background-color: rgb(256,156,0);
}

#phonebar a:link{
	text-decoration: none;
}

@media(max-width: 1023px){
	#bar2, .header{
		display: none;
	}
}

@media(max-width: 1023px){
	#phoneheader{
		display: block;
	}
}

@media(min-width: 1024px){
	#b04{
		top: -50px;
	}
}

@media (max-width: 1023px) {
	body{
		background-color: #eee;
	}
}

#phonebar table{
	color: white;
	width: 100%;
}

#phonebarth{
	background-color: rgb(256,156,0);
}

#phonebar a:link{
	color: white;
	font-size: 18px;
}

#phonebar a:visited{
	color: white;
}

#phonebar td{
	padding-left: 35px;
}

#blank{
    height: 50px;
    width: 100%;
}

#watchcard, #uploadcard, #hearthstone{
	border-bottom: 1px solid #666;
}

#spantr{
	display: none;
}

.spanli{
	list-style: none;
	float: left;
	padding-left: 5%;
	height: 30px;
	padding-right: 5%;
	padding-top: 10px;
}

#spanul{
    display: none;
	margin-left: 30%;
}

#spanul a:link{
	color: white;
	font-family: MicrosoftYaHei;
}

#spanul a:visited{
	color: white;
}

.spanli:hover{
	background-color: rgba(73,83,108,0.8);
}

.maingame{
	width:100%;
    text-align: center;
}

.introboxcontent{/*actually is detailbox content*/
	width: 80%;
	margin-left: 10%;
	padding-top: 60px;
	padding-bottom: 30px;
}
.introbox{/*the box which look like ios 10 style*/
	padding-left: 5%;
	padding-right: 5%;
	padding-top: 30px;
	padding-bottom: 30px;
	margin-top: 20px;
	width:100%;
	background-color: #fff;
	transition: 0.3s;
	border-radius: 20px;
}

.detailbox{/*box with black background*/
	position: fixed;
	height: 100%;
	width: 100%;
	background-color: white;
	overflow: auto;
	z-index: 300;
	left: 0;
	right:0;
	top: 100px;
	bottom: 0;
	margin: auto;
	display: none;
	transition: 0.2s;
	transform: translate3d(0,0,0);
}

@media (min-width: 1024px) {
	.detailbox{
		width:768px;
		height:600px;
	}
}

.imgstyle{/*style of cross in detailbox*/
	position: absolute;
	z-index:2;
	height: 100%;
	transition: 0.2s;
}
.imgstyle:hover{
	transform:rotate(90deg);
}

@media (min-width: 1024px) {
	.introbox{
		width: 90%;
		margin-top: 40px;
		margin-bottom: 40px;
		border-radius: 0;
	}
}
.shadow{
	box-shadow: 0px 1px 1px #999;
}

.flowleft{
	margin-left: 2%;
}
.flowright{
	margin-left: 2%;
}
@media (min-width: 1024px){
	.flowleft{
		margin-left: 6%;
		float: left;
	}
}
@media (min-width: 1024px){
	.flowright{
		float: right;
		margin-left: 0;
		margin-right: 6%;
	}
}

@media (min-width: 1024px) {
	.introbox:hover{
		box-shadow: 0px 5px 20px #999;
	}
}


.left{/*use in intro box*/
	text-align: left;
	font-family: "Microsoft YaHei";
}

.spanleft{/*use in intro box*/
	text-align: left;
	font-family: "Microsoft YaHei";
	font-size: 14px;
	padding-top: 10px;
}
@media (min-width: 1024px) {
	.maingame{
		padding-top: 50px;
	}
}

.clearfix{
	overflow: hidden;
}

.mainbutton1{/*frame of buttons*/
	border-radius: 10px;
	text-align: center;
	margin-left: 10%;
	width: 80%;
	margin-top: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
	font-family: "Microsoft YaHei";
}

@media(min-width: 1024px){
	.mainbutton1{
		width: 50%;
		margin-left: 0;
	}
}

.bluebutton{/*style of timetable buttons*/
	border: 1px solid #0686c1;
	color: white;
	background-color: #0686c1;
	transition: 0.2s;
}
.orangebutton{/*go to upload page button*/
	border: 1px solid orangered;
	color: white;
	background-color: orangered;
	transition: 0.2s;
}
@media (min-width: 1024px) {
	.bluebutton{
		color: #0686c1;
		background-color: white;
	}
}
@media (min-width: 1024px) {
	.orangebutton{
		color: orangered;
		background-color: white;
	}
}
@media (min-width: 1024px) {
	.bluebutton:hover{
		color: white;
		background-color: #0686c1;
	}
}
@media (min-width: 1024px) {
	.orangebutton:hover{
		color: white;
		background-color: orangered;
	}
}
.gamecontainer{/*container of game intro and timetable button*/
	width: 41%;
}

@media (max-width: 1023px) {
	.gamecontainer{
		width: 86%;
	}
}

#footer{
	width: 100%;
	text-align: center;
	padding-bottom: 30px;
	margin-top: 50px;
}

.timetable{/*timetable content*/
	border-radius: 5px;
	width: 90%;
	padding:5%;
	margin-top: 10px;
}

.redbg{/*background in timetable when the date is one day or less than one day*/
	background-color: lightcoral;
}

.normalbg{/*background in timetable when the date is more than one day*/
	background-color: aqua;
}
.greybg{/*background in timetable when after the game*/
	background-color: #999999;
}
.show{
	display: block;
}
span{/*use in timetable*/
	font-size: 15px;
}

.timetable h1{
	text-align: center;
}

.timetable p{
	text-align: center;
}

.buttonstyle{
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0);
	border: 0;
	color: white;
	font-size: 18px;
	font-family: "Microsoft YaHei";
}

